test/bad/10-arr-acc-lt-zero.mac



int main() {
    int[] a = new int[5];
    int b = 8;
    return 0;
}